Closed Bug 1621808 Opened 5 years ago Closed 5 years ago

Crash messages for failing to apply seccomp-bpf policy are backwards for tsync vs. not

Categories

(Core :: Security: Process Sandboxing, defect, P2)

Unspecified
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox76 --- fixed

People

(Reporter: jld, Assigned: jld)

References

Details

Attachments

(1 file)

A slight mistake in the patch for bug 1257361: this crash should have the message about tsync and this crash should have the one about prctl; they're exactly backwards and nobody noticed until bug 1621686 (because those error cases can't happen unless something goes very wrong).

Pushed by jedavis@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/970ef79be316 Fix crash messages for seccomp-bpf failures. r=gcp
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: