Bug 1621808 - Fix crash messages for seccomp-bpf failures. r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D66524

--HG--
extra : moz-landing-system : lando